Simiplify even more

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,6 @@
-FROM buildpack-deps:bullseye-curl
+FROM ocaml/opam:debian
 
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-  && apt-get -y install opam git build-essential curl unzip bubblewrap pkg-config
+RUN sudo apt-get update \
+  && sudo apt-get -y install git curl unzip bubblewrap pkg-config
 
-RUN opam init -y --disable-sandboxing
-RUN opam install -y dune ocaml-lsp-server opam-monorepo ocamlformat.0.24.1 dune-release odoc mdx
+RUN opam install -y dune ocaml-lsp-server ocamlformat utop
