--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,12 @@
 {
     "name": "OCaml Devcontainer",
     "dockerFile": "Dockerfile",
+    "build":{
+        "args" : {
+            // OCaml version: 4.02, 4.03, 4.04, 4.05, 4.06, 4.07, 4.08, 4.09, 4.10, 4.11, 4.12, 4.13. 4.14, 5.0, 5.1, 5.2
+            "VERSION": "5.0"
+        }
+    },
     "customizations": {
         "vscode": {
             "extensions": ["ocamllabs.ocaml-platform"]
