Use ocaml-platform-installer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,7 @@
 FROM ocaml/opam:debian
 
-# Basic packages:
-# dune - build system
-# utop - nicer REPL
-# ocaml-lsp-server - backend for VSCode OCaml extension
-# ocamlformat - code formatter, used by ocaml-lsp-server
-RUN opam install -y dune utop ocaml-lsp-server ocamlformat
+# Install dev tools via ocaml-platform installer
+SHELL ["/bin/bash", "-ec"]
+RUN bash < <(curl -sL https://github.com/tarides/ocaml-platform-installer/releases/latest/download/installer.sh)
+RUN ocaml-platform
+
